# setuptools config
# see http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = llm_result_utils
version = 0.0.1
description = LLM Result Utils
long_description = file: README.md
long_description_content_type = text/markdown
license = 'Apache'
author = Holden Karau
author_email = holden@pigscanfly.ca
classifiers =
    Operating System :: Unix
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
include_package_data = True
packages = find:
install_requires =
tests_require =
    pytest
    tox
    isort
    black
    flake8
    django-stubs
    types-python-dateutil
    mypy-extensions

[options.packages.find]
include =
    llm-result-utils
    llm-result-utils.*
    llm_result_utils
    llm_result_utils.*
    requirements.txt

[options.extras_require]
tests =
    pytest
    tox
    isort
    black
    flake8
pep8 = flake8
coverage = pytest-cov
docs =
    sphinx
    sphinx-rtd-theme
release =
    tbump
    twine
